Add a ongoing-version endpoint. Fixes #52
